--- a/recipes/bologne_cake.html
+++ b/recipes/bologne_cake.html
@@ -11,11 +11,20 @@
     <p>An unconventional dish that may cause you to gag at the first sight, but isn't as gross as you think it would be<br>
     This simple recipe is a beloved staple in the South and only needs 3 ingredients, it's perfect as a centerpiece at parties,<br>
     as a 5-minute meal, or if you occasionally don't feel like watching your health. Either way, grab some crackers, a knife,<br>
-    cut yourself a slice and dig in.</p>
+    cut yourself a slice and dig in.</p><br>
 
     <ul>
-        <li></li>
+        <li>1 pound of sliced bologne</li>
+        <li>1 8oz packet of cream cheese or a tub of mayo</li>
+        <li>mustard</li>
     </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Take the bologne and stack the slices together to form a tower</li>
+        <li>Smother the tower in cream cheese or mayo</li>
+        <li>Decorate with mustard</li>
+    </ol>
 <body>
     
 </body>
