--- a/recipes/meat_jelly.html
+++ b/recipes/meat_jelly.html
@@ -7,11 +7,13 @@
     <title>Meat Jelly</title>
 </head>
 <body>
-    <1h>Meat Jelly</1h> <br>
-
-    <4h>Better known as aspic</4h> <br>
+    <h1>Meat Jelly</h1> <br>
     
-    <img src="repos/odin-recipes/media/meat_jelly.png">
-
+    <img src="/media/meat_jelly.JPG">
+    <p>Better known as aspic, this once popular dish has a few valuable uses to it.<br>
+    The use of jello in aspic was used to preserve foods from the elements and rot.<br>
+    It could also be used for keeping flavor and inhancing flavor, so it made sense<br>
+    to use it for meat preservation. While aspic isn't as popular as it was in America,<br>
+    it's still a big hit in Russia.</p>
 </body>
 </html>
