--- a/recipes/meat_jelly.html
+++ b/recipes/meat_jelly.html
@@ -15,5 +15,32 @@
     It could also be used for keeping flavor and inhancing flavor, so it made sense<br>
     to use it for meat preservation. While aspic isn't as popular as it was in America,<br>
     it's still a big hit in Russia.</p>
+
+    <ul>
+        <li>1 pound of meat(any kind)</li>
+        <li>16 cups of water</li>
+        <li>4-5 cloves of garlic</li>
+        <li>1 bay leaf</li>
+        <li>2 tbsps of salt</li>
+        <li>1 tsp of ground black pepper</li>
+        <li>(Optional) 1 tbsp of gelatin</li>   
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Add meat and vegetables in pot,pour water in and boil until<br>
+            it reaches boiling temperature and bubbles appear on the surface.<br>
+            Lower heat ans let it simmer for 3-4 hours or until meat comes off <br>
+            the bone
+        </li>
+        <li>Strain everything and separate the content from the liquid</li>
+        <li>Cut meat on chopping board, crush and chop the garlic,and incorporate<br>
+         the spices</li>
+         <li>Add everything back into the brother and let it simmer again</li>
+         <li>Once done, pour mixture into bowls, cover with plastic wrap and leave in<br>
+            fridge. Leave overnight and enjoy the next day.
+        </li>
+    </ol>
 </body>
 </html>
