--- a/recipes/pickled_pigs_feet.html
+++ b/recipes/pickled_pigs_feet.html
@@ -10,6 +10,33 @@
     <h1>Pickled Pigs Feet</h1> <br>
 
     <img src="/media/pig.jpg">
-    
+    <p>This popular pickled snack hailing from Eastern Europe is now a popular treat in the South<br>
+       In America. Tasty, simple, and does not take too long to make. Plus, it has a long shelf life<br></p>
+
+       <ul>
+        <li>pigs feet</li>
+        <li>2 quarts of vinegar</li>
+        <li>1 red pepper</li>
+        <li>2 tablespoons of grated horseradish</li>
+        <li>1 teaspoon whole black peppercorns</li>
+        <li>1 teaspoon of whole allspice</li>
+        <li>1 by leaf</li>
+       </ul>
+
+       <h2>Steps</h2>
+
+       <ol>
+        <li>Thouroughly scald, scrape, and clean pigs feet </li>
+        <li>Lightly sprinkled with salt and leave them in fridge<br>
+        for 4 to 8 hours.</li>
+        <li>Afterwards, wash feet in clean, cold water</li>
+        <li>Place in hot water and cook until meat can be<br>
+            from the bones</li>
+        <li>Mix remaining ingredients and bring to a boil</li>
+        <li>Pack the feet into hot jars while leaving 1/2-inch<br>
+            headspace</li>
+        <li>Fill jars 1/2-inch from top with vinegar solution</li>
+        <li>Leave feet in jars and enjoy whenever you want</li>
+       </ol>
 </body>
 </html>
