--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Disgusting Recipes</title>
 </head>
 <body>
-    <h1> Disgusting Recipes</h1><br>
+    <h1 style="text-align:center;">Disgusting Recipes</h1><br>
 
-    <h3>Want a bite!</h3>
+    <h3 style="text-align:center;">Want a bite!</h3>
 
     <a href="recipes/bologne_cake.html">Bologne Cake</a><br>
 
