--- a/index.html
+++ b/index.html
@@ -5,19 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disgusting Recipes</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1 style="text-align:center;">Disgusting Recipes</h1><br>
-
     <h3 style="text-align:center;">Want a bite!</h3>
+    
+    <div id="group1">
+        <a href="recipes/bologne_cake.html" id="link1">Bologne Cake</a><br>
+        <img src="/media/bologne.png" id="image1">
+    </div>
 
-    <a href="recipes/bologne_cake.html">Bologne Cake</a><br>
+    <div id="group2">
+        <a href="recipes/meat_jelly.html" id="link2">Meat Jelly</a><br>
+        <img src="/media/meat_jelly.JPG" id="image2">
+    </div>
 
-    <a href="recipes/meat_jelly.html">Meat Jelly</a><br>
+    <div id="group3">
+        <a href="recipes/pickled_pigs_feet.html" id="link3">Pickled Pigs Feet</a><br>
+        <img src="/media/pig.jpg" id="image3">
+    </div>
 
-    <a href="recipes/pickled_pigs_feet.html">Pickled Pigs Feet</a><br>
-
-    <a href="recipes/fried_spiders.html">Fried Spiders</a><br>
-
+    <div id="group4">
+        <a href="recipes/fried_spiders.html" id="link4">Fried Spiders</a><br>
+        <img src="/media/spiders.jpg" id="image4">
+    </div>
 </body>
 </html>
