Add index.html index.css

--- a/index.html
+++ b/index.html
@@ -11,22 +11,16 @@
     <h1 style="text-align:center;">Disgusting Recipes</h1><br>
     <h3 style="text-align:center;">Want a bite!</h3>
     
-    <div id="group1">
+    <div id="left">
         <a href="recipes/bologne_cake.html" id="link1">Bologne Cake</a><br>
         <img src="/media/bologne.png" id="image1">
-    </div>
-
-    <div id="group2">
         <a href="recipes/meat_jelly.html" id="link2">Meat Jelly</a><br>
         <img src="/media/meat_jelly.JPG" id="image2">
     </div>
 
-    <div id="group3">
+    <div id="right">
         <a href="recipes/pickled_pigs_feet.html" id="link3">Pickled Pigs Feet</a><br>
         <img src="/media/pig.jpg" id="image3">
-    </div>
-
-    <div id="group4">
         <a href="recipes/fried_spiders.html" id="link4">Fried Spiders</a><br>
         <img src="/media/spiders.jpg" id="image4">
     </div>
