--- a/index.html
+++ b/index.html
@@ -11,18 +11,28 @@
     <h1 style="text-align:center;">Disgusting Recipes</h1><br>
     <h3 style="text-align:center;">Want a bite!</h3>
     
+<div class="group">
     <div id="left">
-        <a href="recipes/bologne_cake.html" id="link1">Bologne Cake</a><br>
-        <img src="/media/bologne.png" id="image1">
-        <a href="recipes/meat_jelly.html" id="link2">Meat Jelly</a><br>
-        <img src="/media/meat_jelly.JPG" id="image2">
+        <div id="one">
+            <a href="recipes/bologne_cake.html" id="link1">Bologne Cake</a><br>
+            <img src="/media/bologne.png" id="image1">
+        </div>
+        <div id="two">
+            <a href="recipes/meat_jelly.html" id="link2">Meat Jelly</a><br>
+            <img src="/media/meat_jelly.JPG" id="image2">
+        </div>
     </div>
 
     <div id="right">
-        <a href="recipes/pickled_pigs_feet.html" id="link3">Pickled Pigs Feet</a><br>
-        <img src="/media/pig.jpg" id="image3">
-        <a href="recipes/fried_spiders.html" id="link4">Fried Spiders</a><br>
-        <img src="/media/spiders.jpg" id="image4">
+        <div id="three">
+            <a href="recipes/pickled_pigs_feet.html" id="link3">Pickled Pigs Feet</a><br>
+            <img src="/media/pig.jpg" id="image3">
+        </div>
+        <div id="four">
+            <a href="recipes/fried_spiders.html" id="link4">Fried Spiders</a><br>
+            <img src="/media/spiders.jpg" id="image4">
+        </div>
     </div>
+</div>    
 </body>
 </html>
