--- a/recipes/pickled_pigs_feet.html
+++ b/recipes/pickled_pigs_feet.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pickled Pigs Feet</title>
+    <link rel="stylesheet" href="pickled_pigs_feet.css">
 </head>
 <body>    
     <h1>Pickled Pigs Feet</h1> <br>
