--- a/recipes/meat_jelly.html
+++ b/recipes/meat_jelly.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meat Jelly</title>
+    <link rel="stylesheet" href="meat_jelly.css">
 </head>
 <body>
     <h1>Meat Jelly</h1> <br>
