--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="two">
             <a href="recipes/meat_jelly.html" id="link2">Meat Jelly</a><br>
-            <img src="/media/meat_jelly.JPG" id="image2">
+            <img src="/media/meat_jelly.jpg" id="image2">
         </div>
     </div>
 
