--- a/recipes/fried_spiders.html
+++ b/recipes/fried_spiders.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Fried Spiders</h1>
 
-    <img src="media/spiders.jpg">
+    <img src="./media/spiders.jpg">
     <p>Fried spiders, yep that's it.As disgusting as it sounds, it is<br>
        a popular delicacy in Cambodia and a popular snack with tourists.<br>
        Some say they taste great while others say it's awful, it's really up<br>
