--- a/recipes/bologne_cake.html
+++ b/recipes/bologne_cake.html
@@ -7,8 +7,10 @@
     <title>Bologne Cake</title>
     <link rel="stylesheet" href="bologne_cake.css">
 </head>
+<body>
     <h1>Bologne Cake</h1>
-    <img src="media/bologne.png">
+    
+    <img src="./media/bologne.png">
     <p>An unconventional dish that may cause you to gag at the first sight, but isn't as gross as you think it would be<br>
     This simple recipe is a beloved staple in the South and only needs 3 ingredients, it's perfect as a centerpiece at parties,<br>
     as a 5-minute meal, or if you occasionally don't feel like watching your health. Either way, grab some crackers, a knife,<br>
@@ -26,7 +28,7 @@
         <li>Smother the tower in cream cheese or mayo</li>
         <li>Decorate with mustard</li>
     </ol>
-<body>
+
     
 </body>
 </html>
