--- a/recipes/meat_jelly.html
+++ b/recipes/meat_jelly.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Meat Jelly</h1> <br>
     
-    <img src="./media/meat_jelly.jpg">
+    <img src="../media/meat_jelly.jpg">
     <p>Better known as aspic, this once popular dish has a few valuable uses to it.<br>
     The use of jello in aspic was used to preserve foods from the elements and rot.<br>
     It could also be used for keeping flavor and inhancing flavor, so it made sense<br>
