--- a/recipes/pickled_pigs_feet.html
+++ b/recipes/pickled_pigs_feet.html
@@ -10,7 +10,7 @@
 <body>    
     <h1>Pickled Pigs Feet</h1> <br>
 
-    <img src="./media/pig.jpg">
+    <img src="../media/pig.jpg">
     <p>This popular pickled snack hailing from Eastern Europe is now a popular treat in the South<br>
        In America. Tasty, simple, and does not take too long to make. Plus, it has a long shelf life<br></p>
 
